# kelp

./: .gitignore  Cargo.toml  LICENSE  README.md  perft.sh
.cargo/: config.toml
.github/workflows/: rust-ci.yml
kelp_engine/: Cargo.toml  LICENSE
kelp_engine/src/: lib.rs  main.rs  perft.sh
kelp_engine/src/kelp/: kelp.rs  mod.rs  uci_trait.rs
kelp_engine/src/kelp/board/: board.rs  fen.rs  mod.rs  moves.rs  piece.rs  zobrist.rs
kelp_engine/src/kelp/kelp_core/: bitboard.rs  generate_attacks.rs  lookup_table.rs
kelp_engine/src/kelp/mov_gen/: generator.rs  perft.rs
kelp_engine/src/kelp/search/: draw_table.rs  eval.rs  mod.rs  negamax.rs  transposition.rs
kelp_perft/: Cargo.toml
kelp_perft/src/: main.rs
src/: main.rs
src/kelp/: mod.rs
src/kelp/board/: bitboard.rs  board.rs  fen.rs  generate_attacks.rs  lookup_table.rs  magics.rs  mod.rs  moves.rs  piece.rs
src/kelp/kelp_core/: bitboard.rs  generate_attacks.rs  lookup_table.rs  magics.rs  mod.rs
src/kelp/mov_gen/: generator.rs  mod.rs  perft.rs
