[package]
name = "kelp_engine"
version = "0.10.2"
authors = ["Gautam Dhingra <gautamdhingra8404@gmail.com>"]
license = "MIT"
description = "Kelp is a UCI compatible chess engine written in Rust.\nIt is released as a free software under GPLv License.\nFor more information visit https://github.com/gautam8404/kelp/#readme"
edition = "2021"

[[bin]]
name = "kelp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.1"
log = "0.4.19"
simple-logging = "2.0.2"
rand = "0.8.5"
rand_chacha = "0.3.1"



[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
